@@ -1714,6 +1714,124 @@ jtag_device_def_type deviceDefinitions[] = {
 	    0x1F,	// EECRAddress
 	},
     },
+    // DEV_AT90PWM2B
+    {
+	"at90pwm2b",
+	0x9383,
+	64, 128,	// 8192 bytes flash
+	4, 128,	// 512 bytes EEPROM
+	32 * 2,	// 32 interrupt vectors
+	DEVFL_MKII_ONLY,
+	NULL,	// registers not yet defined
+	{
+	    0	// no mkI support
+	},
+	{
+	    CMND_SET_DEVICE_DESCRIPTOR,
+	    { 0xF8,0x7F,0x60,0xFE,0xFF,0x33,0xBD,0xE0 }, // ucReadIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucReadIOShadow
+	    { 0xF8,0x7F,0x40,0xEE,0xFF,0x33,0xBC,0xE0 }, // ucWriteIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucWriteIOShadow
+	    { 0x53,0xC2,0xC0,0xDF,0xF7,0x0F,0x00,0x00,
+	      0x3F,0xE4,0x00,0x00,0x36,0x37,0x01,0xFC,
+	      0x05,0xFC,0x07,0xFC }, // ucReadExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucReadIOExtShadow
+	    { 0x11,0xC2,0xC0,0xD8,0xF7,0x0F,0x00,0x00,
+	      0x3F,0xE4,0x00,0x00,0x36,0x33,0x01,0xFC,
+	      0x05,0xFC,0x07,0xFC }, // ucWriteExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
+	    0x00,	// ucIDRAddress
+	    0X00,	// ucSPMCRAddress
+	    0,	// ucRAMPZAddress
+	    fill_b2(64),	// uiFlashPageSize
+	    4,	// ucEepromPageSize
+	    fill_b4(0x0F80),	// ulBootAddress
+	    fill_b2(0xFF),	// uiUpperExtIOLoc
+	    fill_b4(8192),	// ulFlashSize
+	    { 0xBD,0xF2,0xBD,0xE1,0xBB,0xCF,0xB4,0x00,
+	      0xBE,0x01,0xB6,0x01,0xBC,0x00,0xBB,0xBF,
+	      0x99,0xF9,0xBB,0xAF },	// ucEepromInst
+	    { 0xB6,0x01,0x11 },	// ucFlashInst
+	    0x3E,	// ucSPHaddr
+	    0x3D,	// ucSPLaddr
+	    fill_b2(8192 / 64),	// uiFlashpages
+	    0x31,	// ucDWDRAddress
+	    0x00,	// ucDWBasePC
+	    0x00,	// ucAllowFullPageBitstream
+	    fill_b2(0xF80),	// uiStartSmallestBootLoaderSection
+	    1,	// EnablePageProgramming
+	    0,	// ucCacheType
+	    fill_b2(0x0100),	// uiSramStartAddr
+	    0,	// ucResetType
+	    0,	// ucPCMaskExtended
+	    0,	// ucPCMaskHigh
+	    0,	// ucEindAddress
+	    0x1F,	// EECRAddress
+	},
+    },
+    // DEV_AT90PWM3B
+    {
+	"at90pwm3b",
+	0x9383,
+	64, 128,	// 8192 bytes flash
+	4, 128,	// 512 bytes EEPROM
+	32 * 2,	// 32 interrupt vectors
+	DEVFL_MKII_ONLY,
+	NULL,	// registers not yet defined
+	{
+	    0	// no mkI support
+	},
+	{
+	    CMND_SET_DEVICE_DESCRIPTOR,
+	    { 0xF8,0x7F,0x60,0xFE,0xFF,0x33,0xBD,0xE0 }, // ucReadIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucReadIOShadow
+	    { 0xF8,0x7F,0x40,0xEE,0xFF,0x33,0xBC,0xE0 }, // ucWriteIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucWriteIOShadow
+	    { 0x53,0xC2,0xC0,0xDF,0xF7,0x0F,0x00,0x00,
+	      0x3F,0xE4,0x00,0x00,0x36,0x37,0x01,0xFC,
+	      0x05,0xFC,0x07,0xFC }, // ucReadExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucReadIOExtShadow
+	    { 0x11,0xC2,0xC0,0xD8,0xF7,0x0F,0x00,0x00,
+	      0x3F,0xE4,0x00,0x00,0x36,0x33,0x01,0xFC,
+	      0x05,0xFC,0x07,0xFC }, // ucWriteExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
+	    0x00,	// ucIDRAddress
+	    0X00,	// ucSPMCRAddress
+	    0,	// ucRAMPZAddress
+	    fill_b2(64),	// uiFlashPageSize
+	    4,	// ucEepromPageSize
+	    fill_b4(0x0F80),	// ulBootAddress
+	    fill_b2(0xFF),	// uiUpperExtIOLoc
+	    fill_b4(8192),	// ulFlashSize
+	    { 0xBD,0xF2,0xBD,0xE1,0xBB,0xCF,0xB4,0x00,
+	      0xBE,0x01,0xB6,0x01,0xBC,0x00,0xBB,0xBF,
+	      0x99,0xF9,0xBB,0xAF },	// ucEepromInst
+	    { 0xB6,0x01,0x11 },	// ucFlashInst
+	    0x3E,	// ucSPHaddr
+	    0x3D,	// ucSPLaddr
+	    fill_b2(8192 / 64),	// uiFlashpages
+	    0x31,	// ucDWDRAddress
+	    0x00,	// ucDWBasePC
+	    0x00,	// ucAllowFullPageBitstream
+	    fill_b2(0xF80),	// uiStartSmallestBootLoaderSection
+	    1,	// EnablePageProgramming
+	    0,	// ucCacheType
+	    fill_b2(0x0100),	// uiSramStartAddr
+	    0,	// ucResetType
+	    0,	// ucPCMaskExtended
+	    0,	// ucPCMaskHigh
+	    0,	// ucEindAddress
+	    0x1F,	// EECRAddress
+	},
+    },
     // DEV_ATTINY24
     {
 	"attiny24",
